Few changes
- InfoStack added
- InfoCommand added
- Jsoning now handles implementation of commands on it's own
- Setting up PythonManager